--- a/static/index.html
+++ b/static/index.html
@@ -243,7 +243,7 @@
         </div>
     </div>
 
-    <script src="/static/config.js"></script>
-    <script src="/static/game.js"></script>
+    <script src="config.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
